application-deployment/store/quarkuscoffeeshop-customermocker/transformer-patches.yaml
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: quarkuscoffeeshop-customermocker
target:
  group: apps
  version: v1
  kind: Deployment
  namespace: quarkuscoffeeshop-demo
  name: quarkuscoffeeshop-customermocker
patch: |-
  - op: replace
    path: /spec/template/spec/containers/0/env/0/value
    value: "http://CHANGEME"
