application-deployment/store/quarkuscoffeeshop-customermocker/quarkuscoffeeshop-customermocker-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: quarkuscoffeeshop-customermocker
  namespace: quarkuscoffeeshop-demo
  labels:
    app: quarkuscoffeeshop-customermocker
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080c
  selector:
    app: quarkuscoffeeshop-customermocker
  type: ClusterIP
  sessionAffinity: None
