application-deployment/store/quarkuscoffeeshop-customermocker/quarkuscoffeeshop-customermocker.yaml
kind: Service
apiVersion: v1
metadata:
  name: quarkuscoffeeshop-customermocker
  namespace: quarkuscoffeeshop-demo
  labels:
    app: quarkuscoffeeshop-customermocker
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080c
  selector:
    app: quarkuscoffeeshop-customermocker
  type: ClusterIP
  sessionAffinity: None
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: quarkuscoffeeshop-customermocker
  namespace: quarkuscoffeeshop-demo
  labels:
    app: quarkuscoffeeshop-customermocker
    app.kubernetes.io/name: quarkus
    app.kubernetes.io/part-of: quarkuscoffeeshop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkuscoffeeshop-customermocker
  template:
    metadata:
      name: quarkuscoffeeshop-customermocker-deployment
      labels:
        app: quarkuscoffeeshop-customermocker
        app.kubernetes.io/component: quarkuscoffeeshop-customermocker
        app.kubernetes.io/instance: quarkuscoffeeshop-customermocker
        app.kubernetes.io/part-of: quarkuscoffeeshop
        app.openshift.io/runtime-namespace: quarkuscoffeeshop-demo
        quarkuscoffeeshop: ''
    spec:
      containers:
        - name: quarkuscoffeeshop-customermocker
          image: >-
            image-registry.openshift-image-registry.svc:5000/quarkuscoffeeshop-cicd/quarkuscoffeeshop-customermocker:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
